--- a/portfolio.html
+++ b/portfolio.html
@@ -22,35 +22,35 @@
   >
     <!-- Header -->
 
-    <header class="page-header">
+    <header class="header">
       <div class="container">
-        <nav class="page-nav">
+        <nav class="header-nav">
           <a class="logo link" href="./index.html" style="text-decoration: none"
             >Web<span class="logo" style="color: #2e2f42">Studio</span></a
           >
 
-          <ul class="list">
-            <li class="menu-item">
-              <a class="menu-list link" href="./index.html">Studio</a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link" href="./index.html">Studio</a>
             </li>
-            <li class="menu-item">
-              <a class="menu-list link" href="./portfolio.html">Portfolio</a>
+            <li class="header-item">
+              <a class="header-link link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="menu-item">
-              <a class="menu-list link" href="">Contacts</a>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
 
-        <address class="contacts-list" style="font-style: normal">
-          <ul class="contacts list">
-            <li class="list-contact link">
-              <a class="contact link" href="mailto:info@devstudio.com"
+        <address class="contacts" style="font-style: normal">
+          <ul class="contacts-list list">
+            <li class="contacts-item">
+              <a class="contacts-link link" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="list-contact link">
-              <a class="contact link" href="tel:+110001111111"
+            <li class="contacts-item">
+              <a class="contacts-link link" href="tel:+110001111111"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -59,144 +59,168 @@
       </div>
     </header>
 
-    <!-- Our projects -->
+    <!-- Site nav -->
 
     <main>
-      <section>
-        <h1 hidden>Our projects</h1>
-        <ul class="list">
-          <li>
-            <button class="list-btn" type="button">All</button>
-          </li>
-          <li>
-            <button class="list-btn" type="button">Web Site</button>
-          </li>
-          <li>
-            <button class="list-btn" type="button">App</button>
-          </li>
-          <li>
-            <button class="list-btn" type="button">Design</button>
-          </li>
-          <li>
-            <button class="list-btn" type="button">Marketing</button>
-          </li>
-        </ul>
+      <section class="projects">
+        <div class="container">
+          <h1 hidden>Our projects</h1>
+          <ul class="projects-nav list">
+            <li>
+              <button class="list-btn" type="button">All</button>
+            </li>
+            <li>
+              <button class="list-btn" type="button">Web Site</button>
+            </li>
+            <li>
+              <button class="list-btn" type="button">App</button>
+            </li>
+            <li>
+              <button class="list-btn" type="button">Design</button>
+            </li>
+            <li>
+              <button class="list-btn" type="button">Marketing</button>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <ul class="list">
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/banking_app.jpg"
-                alt="Banking interface"
-                width="360"
-              />
-              <h2 class="projects-list">Banking App Interface Concept</h2>
-              <p class="description">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/cashless_payment.jpg"
-                alt="Payment by phone"
-                width="360"
-              />
-              <h2 class="projects-list">Cashless Payment</h2>
-              <p class="description">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/meditation_app.jpg"
-                alt="Phone and laptop"
-                width="360"
-              />
-              <h2 class="projects-list">Meditation App</h2>
-              <p class="description">App</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/taxi_service.jpg"
-                alt="Car interior"
-                width="360"
-              />
-              <h2 class="projects-list">Taxi Service</h2>
-              <p class="description">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/screen_illstrations.jpg"
-                alt="Phone wallpaper"
-                width="360"
-              />
-              <h2 class="projects-list">Screen Illustrations</h2>
-              <p class="description">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/online_courses.jpg"
-                alt="A girl with a phone"
-                width="360"
-              />
-              <h2 class="projects-list">Online Courses</h2>
-              <p class="description">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/instagram_stories_concept.jpg"
-                alt="An example of Instagram stories"
-                width="360"
-              />
-              <h2 class="projects-list">Instagram Stories Concept</h2>
-              <p class="description">Design</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/organic_food.jpg"
-                alt="Food in a bag"
-                width="360"
-              />
-              <h2 class="projects-list">Organic Food</h2>
-              <p class="description">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="">
-              <img
-                src="./images/fresh_coffee.jpg"
-                alt="Making coffee"
-                width="360"
-              />
-              <h2 class="projects-list">Fresh Coffee</h2>
-              <p class="description">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <!-- Our Projects -->
+
+      <section class="first-projects">
+        <div class="container">
+          <ul class="list">
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/banking_app.jpg"
+                  alt="Banking interface"
+                  width="360"
+                />
+                <h2 class="title-project">Banking App Interface Concept</h2>
+                <p class="description">App</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/cashless_payment.jpg"
+                  alt="Payment by phone"
+                  width="360"
+                />
+                <h2 class="title-project">Cashless Payment</h2>
+                <p class="description">Marketing</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/meditation_app.jpg"
+                  alt="Phone and laptop"
+                  width="360"
+                />
+                <h2 class="title-project">Meditation App</h2>
+                <p class="description">App</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="second-projects">
+        <div class="container">
+          <ul>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/taxi_service.jpg"
+                  alt="Car interior"
+                  width="360"
+                />
+                <h2 class="title-project">Taxi Service</h2>
+                <p class="description">Marketing</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/screen_illstrations.jpg"
+                  alt="Phone wallpaper"
+                  width="360"
+                />
+                <h2 class="title-project">Screen Illustrations</h2>
+                <p class="description">Design</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/online_courses.jpg"
+                  alt="A girl with a phone"
+                  width="360"
+                />
+                <h2 class="title-project">Online Courses</h2>
+                <p class="description">Marketing</p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="third-projects">
+        <div class="container">
+          <ul>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/instagram_stories_concept.jpg"
+                  alt="An example of Instagram stories"
+                  width="360"
+                />
+                <h2 class="title-project">Instagram Stories Concept</h2>
+                <p class="description">Design</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/organic_food.jpg"
+                  alt="Food in a bag"
+                  width="360"
+                />
+                <h2 class="title-project">Organic Food</h2>
+                <p class="description">Web Site</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="">
+                <img
+                  src="./images/fresh_coffee.jpg"
+                  alt="Making coffee"
+                  width="360"
+                />
+                <h2 class="title-project">Fresh Coffee</h2>
+                <p class="description">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- Footer -->
 
     <footer class="footer">
-      <a class="logo link" href="./index.html" style="text-decoration: none"
-        >Web <span class="footer-logo-span">Studio</span>
-      </a>
+      <div class="container">
+        <a class="logo link" href="./index.html" style="text-decoration: none"
+          >Web<span class="footer-logo-span">Studio</span></a
+        >
 
-      <p class="footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="footer-subtitle">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
