--- a/portfolio.html
+++ b/portfolio.html
@@ -23,11 +23,11 @@
     <!-- Header -->
 
     <header class="header">
-      <div class="container">
+      <div class="header-container container">
         <nav class="header-nav">
-          <a class="logo link" href="./index.html" style="text-decoration: none"
-            >Web<span class="logo" style="color: #2e2f42">Studio</span></a
-          >
+          <a class="logo link" href="./index.html">
+            Web<span class="span-logo">Studio</span>
+          </a>
 
           <ul class="header-list list">
             <li class="header-item">
@@ -89,8 +89,8 @@
 
       <section class="first-projects">
         <div class="container">
-          <ul class="list">
-            <li>
+          <ul class="first-list list">
+            <li class="first-item">
               <a class="link" href="">
                 <img
                   src="./images/banking_app.jpg"
@@ -101,7 +101,7 @@
                 <p class="description">App</p>
               </a>
             </li>
-            <li>
+            <li class="first-item">
               <a class="link" href="">
                 <img
                   src="./images/cashless_payment.jpg"
@@ -112,7 +112,7 @@
                 <p class="description">Marketing</p>
               </a>
             </li>
-            <li>
+            <li class="first-item">
               <a class="link" href="">
                 <img
                   src="./images/meditation_app.jpg"
@@ -129,8 +129,8 @@
 
       <section class="second-projects">
         <div class="container">
-          <ul>
-            <li>
+          <ul class="second-list">
+            <li class="second-item">
               <a class="link" href="">
                 <img
                   src="./images/taxi_service.jpg"
@@ -141,7 +141,7 @@
                 <p class="description">Marketing</p>
               </a>
             </li>
-            <li>
+            <li class="second-item">
               <a class="link" href="">
                 <img
                   src="./images/screen_illstrations.jpg"
@@ -152,7 +152,7 @@
                 <p class="description">Design</p>
               </a>
             </li>
-            <li>
+            <li class="second-item">
               <a class="link" href="">
                 <img
                   src="./images/online_courses.jpg"
@@ -169,8 +169,8 @@
 
       <section class="third-projects">
         <div class="container">
-          <ul>
-            <li>
+          <ul class="third-list">
+            <li class="third-item">
               <a class="link" href="">
                 <img
                   src="./images/instagram_stories_concept.jpg"
@@ -181,7 +181,7 @@
                 <p class="description">Design</p>
               </a>
             </li>
-            <li>
+            <li class="third-item">
               <a class="link" href="">
                 <img
                   src="./images/organic_food.jpg"
@@ -192,7 +192,7 @@
                 <p class="description">Web Site</p>
               </a>
             </li>
-            <li>
+            <li class="third-item">
               <a class="link" href="">
                 <img
                   src="./images/fresh_coffee.jpg"
@@ -213,7 +213,7 @@
     <footer class="footer">
       <div class="container">
         <a class="logo link" href="./index.html" style="text-decoration: none"
-          >Web<span class="footer-logo-span">Studio</span></a
+          >Web<span class="footer-logo">Studio</span></a
         >
 
         <p class="footer-subtitle">
