--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <!-- Header -->
 
     <header class="header">
-      <div class="container">
+      <div class="header-container container">
         <nav class="header-nav">
-          <a class="logo link" href="./index.html" style="text-decoration: none"
-            >Web<span class="logo" style="color: #2e2f42">Studio</span></a
-          >
+          <a class="logo link" href="./index.html">
+            Web<span class="span-logo">Studio</span>
+          </a>
 
           <ul class="header-list list">
             <li class="header-item">
@@ -197,7 +197,7 @@
     <footer class="footer">
       <div class="container">
         <a class="logo link" href="./index.html" style="text-decoration: none"
-          >Web<span class="footer-logo-span">Studio</span></a
+          >Web<span class="footer-logo">Studio</span></a
         >
 
         <p class="footer-subtitle">
