--- a/portfolio.html
+++ b/portfolio.html
@@ -62,10 +62,10 @@
     <!-- Site nav -->
 
     <main>
-      <section class="projects">
+      <section class="site-nav">
         <div class="container">
           <h1 hidden>Our projects</h1>
-          <ul class="projects-nav list">
+          <ul class="btn-nav list">
             <li>
               <button class="list-btn" type="button">All</button>
             </li>
@@ -87,10 +87,10 @@
 
       <!-- Our Projects -->
 
-      <section class="first-projects">
+      <section class="projects">
         <div class="container">
-          <ul class="first-list list">
-            <li class="first-item">
+          <ul class="projects-list list">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/banking_app.jpg"
@@ -101,7 +101,7 @@
                 <p class="description">App</p>
               </a>
             </li>
-            <li class="first-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/cashless_payment.jpg"
@@ -112,7 +112,7 @@
                 <p class="description">Marketing</p>
               </a>
             </li>
-            <li class="first-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/meditation_app.jpg"
@@ -123,14 +123,7 @@
                 <p class="description">App</p>
               </a>
             </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="second-projects">
-        <div class="container">
-          <ul class="second-list">
-            <li class="second-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/taxi_service.jpg"
@@ -141,7 +134,7 @@
                 <p class="description">Marketing</p>
               </a>
             </li>
-            <li class="second-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/screen_illstrations.jpg"
@@ -152,7 +145,7 @@
                 <p class="description">Design</p>
               </a>
             </li>
-            <li class="second-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/online_courses.jpg"
@@ -163,14 +156,7 @@
                 <p class="description">Marketing</p>
               </a>
             </li>
-          </ul>
-        </div>
-      </section>
-
-      <section class="third-projects">
-        <div class="container">
-          <ul class="third-list">
-            <li class="third-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/instagram_stories_concept.jpg"
@@ -181,7 +167,7 @@
                 <p class="description">Design</p>
               </a>
             </li>
-            <li class="third-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/organic_food.jpg"
@@ -192,7 +178,7 @@
                 <p class="description">Web Site</p>
               </a>
             </li>
-            <li class="third-item">
+            <li class="projects-item">
               <a class="link" href="">
                 <img
                   src="./images/fresh_coffee.jpg"
