--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="about-item">
               <h3 class="about-name">Punctuality</h3>
               <p class="info">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="about-item">
               <h3 class="about-name">Diligence</h3>
               <p class="info">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="about-item">
               <h3 class="about-name">Technologies</h3>
               <p class="info">
                 Design practice focused on digital experiences. We bring forth a
