--- a/portfolio.html
+++ b/portfolio.html
@@ -87,105 +87,105 @@
 
       <!-- Our Projects -->
 
-      <section class="projects">
+      <section class="portfolio">
         <div class="container">
-          <ul class="projects-list list">
-            <li class="projects-item">
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/banking_app.jpg"
                   alt="Banking interface"
                   width="360"
                 />
-                <h2 class="title-project">Banking App Interface Concept</h2>
+                <h2 class="title-portfolio">Banking App Interface Concept</h2>
                 <p class="description">App</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/cashless_payment.jpg"
                   alt="Payment by phone"
                   width="360"
                 />
-                <h2 class="title-project">Cashless Payment</h2>
+                <h2 class="title-portfolio">Cashless Payment</h2>
                 <p class="description">Marketing</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/meditation_app.jpg"
                   alt="Phone and laptop"
                   width="360"
                 />
-                <h2 class="title-project">Meditation App</h2>
+                <h2 class="title-portfolio">Meditation App</h2>
                 <p class="description">App</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/taxi_service.jpg"
                   alt="Car interior"
                   width="360"
                 />
-                <h2 class="title-project">Taxi Service</h2>
+                <h2 class="title-portfolio">Taxi Service</h2>
                 <p class="description">Marketing</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/screen_illstrations.jpg"
                   alt="Phone wallpaper"
                   width="360"
                 />
-                <h2 class="title-project">Screen Illustrations</h2>
+                <h2 class="title-portfolio">Screen Illustrations</h2>
                 <p class="description">Design</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/online_courses.jpg"
                   alt="A girl with a phone"
                   width="360"
                 />
-                <h2 class="title-project">Online Courses</h2>
+                <h2 class="title-portfolio">Online Courses</h2>
                 <p class="description">Marketing</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/instagram_stories_concept.jpg"
                   alt="An example of Instagram stories"
                   width="360"
                 />
-                <h2 class="title-project">Instagram Stories Concept</h2>
+                <h2 class="title-portfolio">Instagram Stories Concept</h2>
                 <p class="description">Design</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/organic_food.jpg"
                   alt="Food in a bag"
                   width="360"
                 />
-                <h2 class="title-project">Organic Food</h2>
+                <h2 class="title-portfolio">Organic Food</h2>
                 <p class="description">Web Site</p>
               </a>
             </li>
-            <li class="projects-item">
+            <li class="portfolio-item">
               <a class="link" href="">
                 <img
                   src="./images/fresh_coffee.jpg"
                   alt="Making coffee"
                   width="360"
                 />
-                <h2 class="title-project">Fresh Coffee</h2>
+                <h2 class="title-portfolio">Fresh Coffee</h2>
                 <p class="description">Web Site</p>
               </a>
             </li>
