Team section fix

--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
                 alt="Mark Guerrero Product Designer"
                 width="264"
               />
-              <h3 class="name-worker">Mark Guerrero</h3>
-              <p class="info-name-worker">Product Designer</p>
+              <div class="worker-wrapper">
+                <h3 class="name-worker">Mark Guerrero</h3>
+                <p class="info-name-worker">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -171,8 +173,10 @@
                 alt="Tom Ford Frontend Developer"
                 width="264"
               />
-              <h3 class="name-worker">Tom Ford</h3>
-              <p class="info-name-worker">Frontend Developer</p>
+              <div class="worker-wrapper">
+                <h3 class="name-worker">Tom Ford</h3>
+                <p class="info-name-worker">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -181,8 +185,10 @@
                 alt="Camila Garcia Marketing"
                 width="264"
               />
-              <h3 class="name-worker">Camila Garcia</h3>
-              <p class="info-name-worker">Marketing</p>
+              <div class="worker-wrapper">
+                <h3 class="name-worker">Camila Garcia</h3>
+                <p class="info-name-worker">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -191,8 +197,10 @@
                 alt="Daniel Wilson UI Designer"
                 width="264"
               />
-              <h3 class="name-worker">Daniel Wilson</h3>
-              <p class="info-name-worker">UI Designer</p>
+              <div class="worker-wrapper">
+                <h3 class="name-worker">Daniel Wilson</h3>
+                <p class="info-name-worker">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
