--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="logo link" href="./index.html" style="text-decoration: none"
-          >Web<span class="footer-logo">Studio</span></a
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-logo-span">Studio</span></a
         >
 
         <p class="footer-subtitle">
