--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
             </li>
           </ul>
 
-          <!-- Our Projects -->
+          <!-- Portfolio -->
 
           <ul class="portfolio-list list">
             <li class="portfolio-item">
