--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
 
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/banking_app.jpg"
                   alt="Banking interface"
@@ -105,7 +105,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/cashless_payment.jpg"
                   alt="Payment by phone"
@@ -116,7 +116,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/meditation_app.jpg"
                   alt="Phone and laptop"
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/taxi_service.jpg"
                   alt="Car interior"
@@ -138,7 +138,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/screen_illstrations.jpg"
                   alt="Phone wallpaper"
@@ -149,7 +149,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/online_courses.jpg"
                   alt="A girl with a phone"
@@ -160,7 +160,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/instagram_stories_concept.jpg"
                   alt="An example of Instagram stories"
@@ -171,7 +171,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/organic_food.jpg"
                   alt="Food in a bag"
@@ -182,7 +182,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/fresh_coffee.jpg"
                   alt="Making coffee"
