--- a/portfolio.html
+++ b/portfolio.html
@@ -100,8 +100,10 @@
                   alt="Banking interface"
                   width="360"
                 />
-                <h2 class="title-portfolio">Banking App Interface Concept</h2>
-                <p class="description">App</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Banking App Interface Concept</h2>
+                  <p class="description">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -111,8 +113,10 @@
                   alt="Payment by phone"
                   width="360"
                 />
-                <h2 class="title-portfolio">Cashless Payment</h2>
-                <p class="description">Marketing</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Cashless Payment</h2>
+                  <p class="description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -122,8 +126,10 @@
                   alt="Phone and laptop"
                   width="360"
                 />
-                <h2 class="title-portfolio">Meditation App</h2>
-                <p class="description">App</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Meditation App</h2>
+                  <p class="description">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -133,8 +139,10 @@
                   alt="Car interior"
                   width="360"
                 />
-                <h2 class="title-portfolio">Taxi Service</h2>
-                <p class="description">Marketing</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Taxi Service</h2>
+                  <p class="description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -144,8 +152,10 @@
                   alt="Phone wallpaper"
                   width="360"
                 />
-                <h2 class="title-portfolio">Screen Illustrations</h2>
-                <p class="description">Design</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Screen Illustrations</h2>
+                  <p class="description">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -155,8 +165,10 @@
                   alt="A girl with a phone"
                   width="360"
                 />
-                <h2 class="title-portfolio">Online Courses</h2>
-                <p class="description">Marketing</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Online Courses</h2>
+                  <p class="description">Marketing</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -166,8 +178,10 @@
                   alt="An example of Instagram stories"
                   width="360"
                 />
-                <h2 class="title-portfolio">Instagram Stories Concept</h2>
-                <p class="description">Design</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Instagram Stories Concept</h2>
+                  <p class="description">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -177,8 +191,10 @@
                   alt="Food in a bag"
                   width="360"
                 />
-                <h2 class="title-portfolio">Organic Food</h2>
-                <p class="description">Web Site</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Organic Food</h2>
+                  <p class="description">Web Site</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -188,8 +204,10 @@
                   alt="Making coffee"
                   width="360"
                 />
-                <h2 class="title-portfolio">Fresh Coffee</h2>
-                <p class="description">Web Site</p>
+                <div class="name-app-portfolio">
+                  <h2 class="title-portfolio">Fresh Coffee</h2>
+                  <p class="description">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
