--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li class="projects-item">
               <img
                 class="projects-img"
-                src="./images/computer.jpg"
+                src="./images/section2/computer.jpg"
                 alt="PC monitor"
                 width="360"
               />
@@ -125,7 +125,7 @@
             <li class="projects-item">
               <img
                 class="projects-img"
-                src="./images/phone1.jpg"
+                src="./images/section2/phone1.jpg"
                 alt="Chat on the phone"
                 width="360"
               />
@@ -133,7 +133,7 @@
             <li class="projects-item">
               <img
                 class="projects-img"
-                src="./images/phone2.jpg"
+                src="./images/section2/phone2.jpg"
                 alt="Phone in hand"
                 width="360"
               />
@@ -151,7 +151,7 @@
             <li class="team-item">
               <img
                 class="section-team-list"
-                src="./images/mark_guerrero.jpg"
+                src="./images/section3/mark_guerrero.jpg"
                 alt="Mark Guerrero Product Designer"
                 width="264"
               />
@@ -163,7 +163,7 @@
             <li class="team-item">
               <img
                 class="section-team-list"
-                src="./images/tom_ford.jpg"
+                src="./images/section3/tom_ford.jpg"
                 alt="Tom Ford Frontend Developer"
                 width="264"
               />
@@ -175,7 +175,7 @@
             <li class="team-item">
               <img
                 class="section-team-list"
-                src="./images/camila_garcia.jpg"
+                src="./images/section3/camila_garcia.jpg"
                 alt="Camila Garcia Marketing"
                 width="264"
               />
@@ -187,7 +187,7 @@
             <li class="team-item">
               <img
                 class="section-team-list"
-                src="./images/daniel_wilson.jpg"
+                src="./images/section3/daniel_wilson.jpg"
                 alt="Daniel Wilson UI Designer"
                 width="264"
               />
